--- a/index.html
+++ b/index.html
@@ -153,9 +153,9 @@
     }
 
     .Cow{
-        background: url('./resources/images/cow_walk.gif') 0 0;
+        /* background: url('./resources/images/cow_walkv2.gif') 0 0; */
         /* background-image: url('./resources/images/cow_walk.gif'); */
-        background-size: contain;
+        background-size: cover;
         background-repeat: no-repeat;
         border-style: none;
         height: 100%;
@@ -437,7 +437,9 @@
         } else if (tableNumber === 3){
             cowHolder = CowThird;
         }
-        cowHolder.style.background = "url('./resources/images/cow_walk.gif') 0 0";
+        cowHolder.style.background = "url('./resources/images/cow_walkv2.gif') 0 0";
+        cowHolder.style.backgroundSize = "cover";
+        cowHolder.style.backgroundRepeat = "no-repeat";
         cowHolder.style.animation = 'none';
         cowHolder.style.animation = null;
         cowHolder.offsetWidth;
