--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
 
 
     #bread{
+        background-position: center;
         backdrop-filter: blur(20px);
         opacity: 30%;
         background-image: url('./resources/protoimages/questionmark.png');
@@ -96,54 +97,63 @@
 
 
     #cookies{
+        background-position: center;
         backdrop-filter: blur(20px);
         opacity: 30%;
         background-image: url('./resources/protoimages/questionmark.png');
     }
 
     #sandwich{
+        background-position: center;
         backdrop-filter: blur(20px);
         opacity: 30%;
         background-image: url('./resources/protoimages/questionmark.png');
     }
 
     #icecream{
+        background-position: center;
         backdrop-filter: blur(20px);
         opacity: 30%;
         background-image: url('./resources/protoimages/questionmark.png');
     }
 
     #cake{
+        background-position: center;
         backdrop-filter: blur(20px);
         opacity: 30%;
         background-image: url('./resources/protoimages/questionmark.png');
     }
 
     #nachos{
+        background-position: center;
         backdrop-filter: blur(20px);
         opacity: 30%;
         background-image: url('./resources/protoimages/questionmark.png');
     }
 
     #donut{
+        background-position: center;
         backdrop-filter: blur(20px);
         opacity: 30%;
         background-image: url('./resources/protoimages/questionmark.png');
     }
 
     #burger{
+        background-position: center;
         backdrop-filter: blur(20px);
         opacity: 30%;
         background-image: url('./resources/protoimages/questionmark.png');
     }
 
     #pizza{
+        background-position: center;
         backdrop-filter: blur(20px);
         opacity: 30%;
         background-image: url('./resources/protoimages/questionmark.png');
     }
 
     #questionmark{
+        background-position: center;
         backdrop-filter: blur(20px);
         background-image: url('./resources/protoimages/questionmark.png');
     }
@@ -339,7 +349,7 @@
         height: fit-content;
         padding: 10px;
         position: relative;
-        top: 100%;
+        top: 80%;
         text-align: center;
         opacity: 0%;
     }
@@ -432,22 +442,6 @@
         background-size: cover;
         background-repeat: no-repeat;
         border-radius: 20px;
-    }
-
-    .phoneHelp{
-        font-family: 'Indie Flower', cursive;
-        font-size: 20px;
-        position: relative;
-        transform: scale(0.8);
-        width: 100%;
-        height: auto;
-        border: 0px solid rgb(0, 0, 0);
-        border-radius: 50px;
-        transition: transform 0.3s ease-in-out;
-    }
-
-    .phoneHelp:hover{
-        transform: scale(0.9);
     }
 
     #phoneLogo{
@@ -574,7 +568,7 @@
 
     #time{
         position: relative;
-        top: 70%;
+        top: 60%;
         height: 100%;
         width: 200%;  
         transform: translateY(-50%);
@@ -605,7 +599,6 @@
                 <div id="star4"></div>
             </div>
             <h1 id="levelTracker">Next Moochelin star in:</h1>
-            <button class="phoneHelp" id="phoneHelp">HELP</button>
         </div>
         
     </div>
