--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     body{
         display: flex;
         justify-content: center;
-        /* overflow-y: hidden; */
+        overflow-y: hidden;
         overflow-x: hidden;
         cursor: url('./resources/images/cursor1.svg'), auto;
     }
