--- a/index.html
+++ b/index.html
@@ -586,6 +586,7 @@
         display: flex;
         flex-direction: column;
         justify-items: center;
+        border: 5px solid rgba(0, 0, 0, 0.397);
     }
 
     .mainScroll{
