--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
         opacity: 100%;
         border-radius: 20px;
         background-image: url('./resources/protoimages/wallmetal.jpg');
+        box-shadow: 5px 10px 8px #000000;
     }
     
     #shutterBG.raise{
@@ -352,6 +353,7 @@
         top: 80%;
         text-align: center;
         opacity: 0%;
+        box-shadow: 5px 10px 8px #000000;
     }
 
     @keyframes shake {
@@ -392,6 +394,7 @@
         height: 100%;
         width: 100%;
         z-index: 1;
+        box-shadow: 5px 10px 8px #000000;
     }
 
     #completePun{
@@ -401,7 +404,7 @@
         font-family: 'Rubik Spray Paint', cursive;
         color: white;
         text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
-        top: 40vh;
+        top: 50vh;
         left: 45vw;
         text-align: center;
     }
@@ -582,21 +585,23 @@
         width: 90vw;
         margin-top: 100px;
         border-radius: 20px;
-        background-color: burlywood;
+        background-color: rgb(124, 124, 124);
         display: flex;
         flex-direction: column;
         justify-items: center;
         border: 5px solid rgba(0, 0, 0, 0.397);
+        box-shadow: 5px 10px 8px #000000;
     }
 
     .mainScroll{
         margin-top: 20px;
         max-height: 80%;
         width: 100%;
-        background-color: aliceblue;
+        background-color: burlywood;
         border-radius: 10px;
         overflow: scroll;
         overflow-x: hidden;
+        box-shadow: 5px 10px 8px #0000002f;
     }
 
     #start{
@@ -608,6 +613,7 @@
         padding-right: 10px;
         font-family: 'Indie Flower', cursive;
         border-radius: 20px;
+        box-shadow: 5px 10px 8px #000000;
     }
 
     h5{
