--- a/index.html
+++ b/index.html
@@ -664,7 +664,7 @@
             <h2>WILL THERE BE A SEQUEL?</h2>
             <p>Maybe? This is a side project.<br/>No plans on proceeding with game dev career.</p>
             <h2>WHATS THE MUSIC?</h2>
-            <p>Dancing in the Moonlight</p>
+            <p>Dancing in the Moonlight - Instrumental (Anton V)</p>
             <h2>YOU VEGAN?</h2>
             <p>No. Again, I'm not going moo moo vegan..</p>
             <h2>----- MOOPANDA v1.1.6 -----</h2>
