--- a/index.html
+++ b/index.html
@@ -664,7 +664,7 @@
             <h2>WILL THERE BE A SEQUEL?</h2>
             <p>Maybe? This is a side project.<br/>No plans on proceeding with game dev career.</p>
             <h2>WHATS THE MUSIC?</h2>
-            <p>Dancing in the Moonlight - Instrumental (Anton V)</p>
+            <p>SpongeBob Hawaiian Happiness</p>
             <h2>YOU VEGAN?</h2>
             <p>No. Again, I'm not going moo moo vegan..</p>
             <h2>----- MOOPANDA v1.1.6 -----</h2>
@@ -799,7 +799,7 @@
     var s_moo = new Audio('./resources/sound/moo.mp3');
     var s_star = new Audio('./resources/sound/star.mp3');
     var s_click = new Audio('./resources/sound/button.mp3');
-    var s_spongebob = new Audio('./resources/sound/final.mp3');
+    var s_spongebob = new Audio('./resources/sound/SpongeBob.mp3');
 
     s_spongebob.addEventListener('ended', function() {
         this.currentTime = 0;
